k3s/infra/youtrack/youtrack-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: youtrack-ingress
  namespace: youtrack
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`youtrack.k3s.hackbox.cc`)
    kind: Rule
    services:
    - name: youtrack-svc
      kind: Service
      port: 8080
      namespace: youtrack
  tls: {} # use TLS store default certificate
